--- a/styles.css
+++ b/styles.css
@@ -81,6 +81,8 @@ nav a {
    display: flex;
    flex-direction: column;
    align-items: center; 
+   background-size: cover; 
+   background-position: center;
 }
 .app-card img { 
    width: 64px;
