--- a/styles.css
+++ b/styles.css
@@ -60,7 +60,7 @@ nav a {
    cursor: pointer; 
 }
 .container {
-   height: calc(100vh - 60px);
+   height: calc(100vh - var(--header-height));
    border-spacing: 10px;
    border-radius: 10px;
    right: 10px;
