--- a/styles.css
+++ b/styles.css
@@ -60,7 +60,7 @@ nav a {
    cursor: pointer; 
 }
 .container {
-   height: 100vh/*calc(100vh - var(--header-height) - 10px)*/;
+   height: calc(100vh - var(--header-height) - 10px);
    border-spacing: 10px;
    border-radius: 10px;
    right: 10px;
