--- a/styles.css
+++ b/styles.css
@@ -39,6 +39,11 @@ nav a {
    text-decoration: none;
    font-weight: 500; 
 }
+.bartxt { 
+   color: #fff; 
+   text-decoration: none;
+   font-weight: 500; 
+}
 .search-bar { 
    margin: 2rem auto;
    max-width: 600px;
