--- a/apps/content/styles.css
+++ b/apps/content/styles.css
@@ -16,6 +16,7 @@ body {
   flex-direction: column;
   gap: 8px; /* espace entre les éléments */
   margin-top: 8px;
+  padding: 12px 32px;
 }
             .app-icon {
                 width: 96px;
@@ -61,7 +62,7 @@ body {
                 color: #0078d4;
                 border: none;
                 border-radius: 6px;
-                padding: 12px 32px;
+                /*padding: 12px 32px;*/
                 font-size: 1.1rem;
                 font-weight: 600;
                 cursor: pointer;
