--- a/apps/content/styles.css
+++ b/apps/content/styles.css
@@ -62,6 +62,17 @@ body {
     display: flex;
     align-items: center;
 }
+.header-app table,
+.header-app tr,
+.header-app td {
+  margin: 0;
+  padding: 0;
+  border: none;
+  border-spacing: 0;
+  border-collapse: collapse;
+  vertical-align: middle;
+  height: 1.5em;
+}
 .install-btn {
     background: #fff;
     color: #0078d4;
