--- a/apps/content/styles.css
+++ b/apps/content/styles.css
@@ -60,7 +60,7 @@ body {
     font-size: 1rem;
     color: #00c40a;
     display: flex;
-    align-items: center;
+    margin-bottom: 8px;
 }
 .header-app table,
 .header-app tr,
